2010-10-22  Eric Seidel  <eric@webkit.org>

        Unreviewed.

        Make the EWS queues restart themselves more often.
        This matches the commit-queue.

        * EWSTools/start-queue.sh:

2010-10-22  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        commit-queue should not pass --quiet to subcommands now that the parent command does the reporting
        https://bugs.webkit.org/show_bug.cgi?id=48165

        * Scripts/webkitpy/tool/bot/commitqueuetask.py:
        * Scripts/webkitpy/tool/bot/commitqueuetask_unittest.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:

2010-10-22  Mario Sanchez Prada  <msanchez@igalia.com>

        Adding myself as a committer.

        * Scripts/webkitpy/common/config/committers.py:

2010-10-20  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Barth and Darin Adler.

        Using the decidePolicyForMIMEType delegate message in an asynchronous manner does not work
        https://bugs.webkit.org/show_bug.cgi?id=48014
        <rdar://problem/8202716>
        
        * DumpRenderTree/LayoutTestController.cpp:
        (setCustomPolicyDelegateCallback):
        Add callIgnoreInDecidePolicyForMIMETypeAfterOneSecond argument.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setCustomPolicyDelegate):
        Add callIgnoreInDecidePolicyForMIMETypeAfterOneSecond argument.

        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setCustomPolicyDelegate):
        Add callIgnoreInDecidePolicyForMIMETypeAfterOneSecond argument.

        * DumpRenderTree/mac/PolicyDelegate.h:
        * DumpRenderTree/mac/PolicyDelegate.mm:
        (-[PolicyDelegate webView:decidePolicyForMIMEType:request:frame:decisionListener:]):
        If _callIgnoreInDecidePolicyForMIMETypeAfterOneSecond is true, call [listener ignore] after one second.

        (-[PolicyDelegate setCallIgnoreInDecidePolicyForMIMETypeAfterOneSecond:]):